<!--
  ~ Copyright (c) 2021. Boost Software License 1.0
  ~ @author Mikhail Sayapin dev@ms-web.ru
  -->

<resources>
    <string name="app_name">MySmartHome3</string>
    <string name="title_home">Свет</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_prihozhaya">Прихожая</string>
    <string name="title_toilet">Туалет</string>
    <string name="title_bedroom">Спальня</string>
    <string name="title_livingroom">Гостинная</string>
    <string name="title_livingroom_spots">Гостинная\nспоты</string>
    <string name="title_kitchen">Кухня</string>
    <string name="title_kitchen_spots">Кухня споты</string>
    <string name="title_activity_settings">Настройки</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="change_activity">Change activity</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="messager_settings">Настройки сокетной службы</string>
    <string name="messager_url">Адрес</string>
    <string name="messager_app_name">Имя приложения</string>
    <string name="messager_app_pass">Пароль приложения</string>
    <string name="save_settings">Сохранить настройки</string>


</resources>