<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2021. Boost Software License 1.0
  ~ @author Mikhail Sayapin dev@ms-web.ru
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/btnLivingroom"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="40dp"
        android:src="@mipmap/lamp_foreground"
        app:layout_constraintBottom_toTopOf="@+id/btnKitchenSpots"
        app:layout_constraintStart_toEndOf="@+id/btnBedroom" />

    <ImageButton
        android:id="@+id/btnHallway"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/title_prihozhaya"
        android:src="@mipmap/lamp_foreground"
        app:layout_constraintBottom_toTopOf="@+id/btnLivingroomSpots"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:text="@string/title_prihozhaya"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHallway" />

    <ImageButton
        android:id="@+id/btnToilet"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="40dp"
        android:src="@mipmap/lamp_foreground"
        app:layout_constraintBottom_toTopOf="@+id/btnKitchen"
        app:layout_constraintStart_toEndOf="@+id/btnHallway" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="4dp"
        android:text="@string/title_toilet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHallway" />

    <ImageButton
        android:id="@+id/btnBedroom"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="40dp"
        android:src="@mipmap/lamp_foreground"
        app:layout_constraintBottom_toTopOf="@+id/btnKitchenSpots"
        app:layout_constraintStart_toEndOf="@+id/btnToilet" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="228dp"
        android:layout_marginTop="4dp"
        android:text="@string/title_bedroom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHallway" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="324dp"
        android:layout_marginTop="4dp"
        android:text="@string/title_livingroom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHallway" />

    <ImageButton
        android:id="@+id/btnLivingroomSpots"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="100dp"
        android:src="@mipmap/lamp_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btnKitchenSpots"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="100dp"
        android:src="@mipmap/lamp_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnKitchen" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        android:text="@string/title_livingroom_spots"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLivingroomSpots" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="188dp"
        android:layout_marginTop="4dp"
        android:text="@string/title_kitchen"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLivingroomSpots" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="296dp"
        android:layout_marginTop="4dp"
        android:text="@string/title_kitchen_spots"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLivingroomSpots" />

    <ImageButton
        android:id="@+id/btnKitchen"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="100dp"
        android:src="@mipmap/lamp_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnLivingroomSpots" />

    <SeekBar
        android:id="@+id/lightPower"
        style="@android:style/Widget.SeekBar"
        android:layout_width="352dp"
        android:layout_height="77dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="188dp"
        android:max="10"
        android:progress="3"
        android:rotation="270"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/messageText"
        android:layout_width="106dp"
        android:layout_height="55dp"
        android:layout_marginStart="160dp"
        android:text="100%"
        android:textAlignment="center"
        android:textSize="36sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>